# blade-defect-detection

./: .dvcignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_training.sh  commands.py  data.dvc  env.example  pyproject.toml  training.pid
.dvc/: config
blade_defect_detection/: __init__.py
blade_defect_detection/data/: __init__.py  dataset.py
blade_defect_detection/inference/: __init__.py  predict.py
blade_defect_detection/models/: __init__.py  model.py
blade_defect_detection/training/: __init__.py  train.py
blade_defect_detection/utils/: logging.py
configs/: config.yaml  data.yaml  mlflow.yaml  model.yaml  training.yaml
configs/data/: dataset.yaml
configs/mlflow/: mlflow.yaml
configs/training/: training.yaml
data/: README.md
lightning_logs/blade_defect_detection/version_0/: events.out.tfevents.1765727951.LAPTOP-4UTPQP7R.1237142.0  hparams.yaml
lightning_logs/blade_defect_detection/version_1/: events.out.tfevents.1765728562.LAPTOP-4UTPQP7R.1240081.0
lightning_logs/blade_defect_detection/version_2/: events.out.tfevents.1765744875.LAPTOP-4UTPQP7R.1309883.0
lightning_logs/blade_defect_detection/version_3/: events.out.tfevents.1765745542.LAPTOP-4UTPQP7R.1313174.0
lightning_logs/blade_defect_detection/version_4/: events.out.tfevents.1765745948.LAPTOP-4UTPQP7R.1315131.0
lightning_logs/blade_defect_detection/version_5/: events.out.tfevents.1765747713.LAPTOP-4UTPQP7R.1322565.0
