[project]
name = "blade-defect-detection"
version = "0.1.0"
description = "Blade defect detection using deep learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pytorch-lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "mlflow>=2.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "fire>=0.5.0",
    "dvc>=3.0.0",
    "dvc-s3>=3.0.0",
    "torchmetrics>=1.0.0",
    "tensorboard>=2.20.0",
    "torchvision>=0.15.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pytest>=7.4.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "PLR", # pylint refactor
    "PLE", # pylint error
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.pyright]
reportMissingImports = false
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
